2000-06-15  Happy Hippo

	* FvwmConsole/FvwmConsole.c: Fixed failure to relay message due to
	some config line not ending in new line. Cleans up socket.

2000-06-15  Mikhael Goikhman  <migo@homemail.com>

	* Temporary disabled locking FvwmTheme config and messages.
	This hanged fvwm.

2000-06-14  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmConsole/FvwmConsoleC.c:
	* FvwmButtons/FvwmButtons.c (main):
	(GetPanelGeometry):
	(main):
	-pedantic fixes

2000-06-14  Hippo

	* FvwmTheme/FvwmTheme.c: config lines and messages are synchronous.
	It's now possible to change a colorset and get values via $[shadow.cs5]

2000-06-13  Chris Rankin  <rankinc@zipworld.com.au>

	* FvwmCommand/FvwmCommandS.c: Modified the reading of the command pipe
	  so that the loop exits when there is an error (unless there was no
	  data found, in which case it continues.)

2000-06-12  olicha  <olivier.chapuis@free.fr>

	* FvwmScript/Instruction.c (*FuncGetOutput):
	Fixed a "writing past the end of allocation" bug in GetOutput
	instruction

2000-06-10  Chris Rankin  <rankinc@zipworld.com.au>

	* FvwmCommand/FvwmCommandS.c: allow signals to restart system calls
	instead of interrupting them, because this flag does not affect select'
	behaviour. Also stopped signals from closing the pipes; the idea is that
	the signal calls "last orders", and then allows the module to exit
	nicely.
	It should not take people's glasses away, because everyone should be
	allowed to drink up ... :-).

	* FvwmPager/x_pager.c: -Wall fix (comment within comment)

2000-06-08  Hippo

	* FvwmCommand/FvwmCommandS: changed the passing of messages from fvwm
	to FvwmCommand to use a queue: eliminated partial sending of messages,
	eliminated delays in handling input from FvwmCommand, now quits when
	fvwm quits (no more hanging around like a bad smell).

	* FvwmPager/x_pager.c: many replacements of (Scr.Vx + DisplayWidth)
	with Scr.VWidth, some indentation changes, tiny mini-window display
	at page edges fixed (possibly).
