@@ -1,5 +1,7 @@
 2000-06-15  Happy Hippo
 
+	* FvwmCommand/FvwmComand*: tries /var/tmp then /tmp for pipe location,
+	FvwmCommandS checks that pipes are pipes & only accessible by the user.
 	* FvwmConsole/FvwmConsole.c: Fixed failure to relay message due to
 	some config line not ending in new line. Cleans up socket.
 
